畝・cell情報の新規追加機能
