# openapi/bundled.yaml
@@ -159,6 +159,67 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FurrowCellInfo'
+    post:
+      summary: Create Furrow Cell Info
+      parameters:
+        - name: farmUuid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: farmManageUuid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: rowId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FurrowCellInfo'
+      responses:
+        '200':
+          description: OK
+  /manageFarms/{farmUuid}/{farmManageUuid}/{rowId}/cell:
+    post:
+      summary: Create Cell Info
+      parameters:
+        - name: farmUuid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: farmManageUuid
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - name: rowId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CellInfo'
+      responses:
+        '200':
+          description: OK
 components:
   schemas:
     LoginOrder:
